--- a/HTML_Fundamentals/index.html
+++ b/HTML_Fundamentals/index.html
@@ -21,7 +21,7 @@
 
     <h2>The Basic Language of the Web: HTML</h2>
 
-    <!-- image tag with source attribute -->
+    <!-- image tag with source attribute -- image of author -->
     <img
       src="laura-jones.jpg"
       alt="Headshot of Laura Jones"
