--- a/HTML_Fundamentals/index.html
+++ b/HTML_Fundamentals/index.html
@@ -71,6 +71,8 @@
       <li>The actual element</li>
     </ol>
 
+    <p>You can learn more at</p>
+
     <h3>Why should you learn HTML?</h3>
     <p>
       There are countless reasons for learning the fundamental language of the
