--- a/HTML_Fundamentals/index.html
+++ b/HTML_Fundamentals/index.html
@@ -23,7 +23,7 @@
 
     <!-- image tag with source attribute -- image of author -->
     <img
-      src="laura-jones.jpg"
+      src="./images/laura-jones.jpg"
       alt="Headshot of Laura Jones"
       width="50px"
       height="50px"
@@ -34,7 +34,7 @@
 
     <!-- img of code -->
     <img
-      src="post-img.jpg"
+      src="./images/post-img.jpg"
       alt="HTML code on a screen"
       width="500px"
       height="200px"
