--- a/HTML_Fundamentals/index.html
+++ b/HTML_Fundamentals/index.html
@@ -19,6 +19,11 @@
     <!-- Code written for HTML Project -->
     <h1>📘 The Code Magazine</h1>
 
+    <a href="blog.html">Blog Challenges Flexbox CSS Grid</a>
+
+    <!-- # is used for null link it will drag you on top of the page nothing else if you use # -->
+    <!-- <a href="#">Challenges</a> -->
+
     <h2>The Basic Language of the Web: HTML</h2>
 
     <!-- image tag with source attribute -- image of author -->
@@ -71,7 +76,14 @@
       <li>The actual element</li>
     </ol>
 
-    <p>You can learn more at</p>
+    <p>
+      You can learn more at
+      <a
+        href="https://developer.mozilla.org/en-US/docs/Web/HTML"
+        target="_blank"
+        >MDN Web Docs</a
+      >
+    </p>
 
     <h3>Why should you learn HTML?</h3>
     <p>
